Add real banners and link

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,11 +19,26 @@
 <div class="main-content-grid">
     <aside class="sidebar-banners">
         <div class="banners-container">
-            {% for i in "123456789abc" %}
-            <a href="#" class="banner-link">
-                <img src="{% static 'img/ph360x120.png' %}" alt="Баннер {{ forloop.counter }}">
-            </a>
-            {% endfor %}
+            <a href="https://edu.gov.ru/" target="_blank" class="banner-link"><img src="{% static "img/banners/min_prosveshhenija.jpg" %}" alt="Официальный сайт министерства просвещения России"></a>
+            <a href="https://minobrnauki.gov.ru/" target="_blank" class="banner-link"><img src="{% static "img/banners/min_nauki.jpg" %}" alt="Официальный сайт министерства науки и высшего образования"></a>
+            <a href="https://obrnadzor.gov.ru/" target="_blank" class="banner-link"><img src="{% static "img/banners/rosobrnadzor.jpg" %}" alt="Официальный сайт Рособрнадзора"></a>
+            <a href="https://edu.gov39.ru/" target="_blank" class="banner-link"><img src="{% static "img/banners/minobr_ko.jpg" %}" alt="Официальный сайт министерства образования Калининградской области"></a>
+            <a href="https://www.klgd.ru/activity/education/" target="_blank" class="banner-link"><img src="{% static "img/banners/komitet.jpg" %}" alt="Официальный сайт комитета по образованию г.Калининграда"></a>
+            <a href="https://www.gosuslugi.ru" target="_blank" class="banner-link"><img src="{% static "img/banners/gosuslugi.png" %}" alt="Портал госуслуги"></a>
+            <a href="https://klgd.pfdo.ru/app" target="_blank" class="banner-link"><img src="{% static "img/banners/pfdo.jpg" %}" alt="Портал ПФДО"></a>
+            <a href="https://семья2024.рф/" target="_blank" class="banner-link"><img src="{% static "img/banners/God-semi_24.jpg" %}" alt="Портал Год семьи в России"></a>
+            <a href="https://telefon-doveria.ru/" target="_blank" class="banner-link"><img src="{% static "img/banners/telefon_doveria.png" %}" alt="Баннер телефон доверия"></a>
+            <a href="https://bus.gov.ru/" target="_blank" class="banner-link"><img src="{% static "img/banners/bas_gof.jpg" %}" alt="Официальный сайт для размещения информации об учреждениях"></a>
+            <a href="https://social.gov39.ru/activities/nezavisimaya-otsenka-kachestva-predostavleniya-uchrezhdeniyami-sotsialnykh-uslug/" target="_blank" class="banner-link"><img src="{% static "img/banners/ocenka.jpg" %}" alt="Независимая оценка качества условий оказания услуг организациями"></a>
+            <a href="https://мвд.рф/anticorr" target="_blank" class="banner-link"><img src="{% static "img/banners/prot_korrupcii.jpg" %}" alt="Противодействие коррупции"></a>
+            <a href="http://pravo.gov.ru" target="_blank" class="banner-link"><img src="{% static 'img/banners/gspi.png' %}" alt="Официальный интернет-портал правовой информации"></a>
+            <a href="https://edu.ru/" target="_blank" class="banner-link"><img src="{% static "img/banners/ros_obrazovanie.jpg" %}" alt="Федеральный портал Российское образование"></a>
+            <a href="http://school-collection.edu.ru/catalog/" target="_blank" class="banner-link"><img src="{% static "img/banners/ekcor.jpg" %}" alt="Единная коллекция цифровых образовательных ресурсов"></a>
+            <a href="http://fcior.edu.ru/" target="_blank" class="banner-link"><img src="{% static "img/banners/obr_resursy.jpg" %}" alt="Федеральный центр информационно-образовательных ресурсов"></a>
+            <a href="https://histrf.ru/" target="_blank" class="banner-link"><img src="{% static "img/banners/history.jpg" %}" alt="Федеральный портал История России"></a>
+            <a href="https://достижения.рф/" target="_blank" class="banner-link"><img src="{% static "img/banners/dostizhenia.png" %}" alt="Портал Достижения России"></a>
+            <a href="https://pro.culture.ru/" target="_blank" class="banner-link"><img src="{% static "img/banners/eip_kult.jpg" %}" alt="Портал «Единое информационное пространство в сфере культуры»"></a>
+            <a href="https://www.culture.ru/" target="_blank" class="banner-link"><img src="{% static "img/banners/kultnasledie.jpg" %}" alt="ПОРТАЛ КУЛЬТУРНОГО НАСЛЕДИЯ И ТРАДИЦИЙ РОССИИ"></a>
         </div>
     </aside>
     <main class="main-content">
