Add new banner 80 yaer of  Great Victory

--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@
             <a href="https://www.klgd.ru/activity/education/" target="_blank" class="banner-link"><img src="{% static "img/banners/komitet.jpg" %}" alt="Официальный сайт комитета по образованию г.Калининграда"></a>
             <a href="https://www.gosuslugi.ru" target="_blank" class="banner-link"><img src="{% static "img/banners/gosuslugi.png" %}" alt="Портал госуслуги"></a>
             <a href="https://klgd.pfdo.ru/app" target="_blank" class="banner-link"><img src="{% static "img/banners/pfdo.jpg" %}" alt="Портал ПФДО"></a>
-            <a href="https://семья2024.рф/" target="_blank" class="banner-link"><img src="{% static "img/banners/God-semi_24.jpg" %}" alt="Портал Год семьи в России"></a>
+            <a href="https://may9.ru/" target="_blank" class="banner-link"><img src="{% static "img/banners/80_let_POBEDY.JPG" %}" alt="80 лет Победы"></a>
             <a href="https://telefon-doveria.ru/" target="_blank" class="banner-link"><img src="{% static "img/banners/telefon_doveria.png" %}" alt="Баннер телефон доверия"></a>
             <a href="https://bus.gov.ru/" target="_blank" class="banner-link"><img src="{% static "img/banners/bas_gof.jpg" %}" alt="Официальный сайт для размещения информации об учреждениях"></a>
             <a href="https://social.gov39.ru/activities/nezavisimaya-otsenka-kachestva-predostavleniya-uchrezhdeniyami-sotsialnykh-uslug/" target="_blank" class="banner-link"><img src="{% static "img/banners/ocenka.jpg" %}" alt="Независимая оценка качества условий оказания услуг организациями"></a>
