--- a/static/css/main.css
+++ b/static/css/main.css
@@ -199,23 +199,38 @@ nav ul li:hover > ul {
 }
 
 .accordion summary::before {
-    content: '+';
+    content: '';
+    display: block;
+    background-image: url('../img/icons/chevron-right.svg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-color: #212529;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
     position: absolute;
-    right: 1rem;
-    font-size: 1.5rem;
-    line-height: 1;
-    transition: transform 0.2s ease-in-out;
+    top: calc(50% - 20px);
+    left: 30%;
+    transition: transform 0.5s ease-in-out;
 }
 
 .accordion details[open] summary::before {
-    content: '−';
-    transform: rotate(180deg);
+    transform-origin: center;
+    transform: rotate(90deg);
 }
 
 
 .accordion .accordion-content {
     padding: 0 1rem 1rem;
     border-top: 1px solid #ddd;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.6s ease-out;
+}
+
+details[open] .accordion-content {
+  max-height: 1000px; 
 }
 
 /* === Info Text (Accordion Content) === */
